# ChangeLog for dev-ruby/icalendar
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2

  24 Sep 2014; Hans de Graaff <graaff@gentoo.org> -icalendar-1.4.3.ebuild,
  -icalendar-2.0.1.ebuild, -icalendar-2.1.0.ebuild:
  Cleanup.

*icalendar-2.1.1 (24 Jul 2014)

  24 Jul 2014; Hans de Graaff <graaff@gentoo.org> +icalendar-2.1.1.ebuild:
  Version bump.

*icalendar-2.1.0 (11 Jul 2014)

  11 Jul 2014; Hans de Graaff <graaff@gentoo.org> +icalendar-2.1.0.ebuild:
  Version bump.

*icalendar-1.5.4 (03 Jul 2014)

  03 Jul 2014; Hans de Graaff <graaff@gentoo.org> +icalendar-1.5.4.ebuild:
  Version bump. Add ruby20, ruby21.

*icalendar-2.0.1 (23 May 2014)

  23 May 2014; Hans de Graaff <graaff@gentoo.org> +icalendar-2.0.1.ebuild:
  Version bump.

  29 Nov 2013; Hans de Graaff <graaff@gentoo.org> -icalendar-1.2.1.ebuild,
  -icalendar-1.4.0.ebuild, -icalendar-1.4.1.ebuild, -icalendar-1.4.2.ebuild:
  Cleanup.

*icalendar-1.4.3 (15 Oct 2013)

  15 Oct 2013; Hans de Graaff <graaff@gentoo.org> +icalendar-1.4.3.ebuild:
  Version bump.

*icalendar-1.4.2 (13 Sep 2013)

  13 Sep 2013; Hans de Graaff <graaff@gentoo.org> +icalendar-1.4.2.ebuild:
  Version bump.

*icalendar-1.4.1 (26 Jul 2013)

  26 Jul 2013; Hans de Graaff <graaff@gentoo.org> +icalendar-1.4.1.ebuild:
  Version bump.

*icalendar-1.4.0 (21 Jun 2013)

  21 Jun 2013; Hans de Graaff <graaff@gentoo.org> +icalendar-1.4.0.ebuild:
  Version bump.

  09 May 2013; Hans de Graaff <graaff@gentoo.org> -icalendar-1.1.5.ebuild,
  -icalendar-1.1.6.ebuild:
  Cleanup.

*icalendar-1.2.1 (23 Nov 2012)

  23 Nov 2012; Hans de Graaff <graaff@gentoo.org> +icalendar-1.2.1.ebuild:
  Version bump. Drop ruby18 since the tests fail.

  24 Sep 2012; Hans de Graaff <graaff@gentoo.org> icalendar-1.1.6.ebuild:
  Add ruby19.

*icalendar-1.1.6 (09 Jun 2011)

  09 Jun 2011; Hans de Graaff <graaff@gentoo.org> +icalendar-1.1.6.ebuild:
  Version bump.

  09 Jun 2011; Hans de Graaff <graaff@gentoo.org> -icalendar-1.1.4.ebuild,
  metadata.xml: