@@ -1,2 +1,3 @@
 DIST icalendar-1.5.4.tar.gz 47472 SHA256 d4f5c0963dbcd5aa7ef1c635afd28407b45729869b85bc96ef702d8808e16ead SHA512 6d6161be63afb1f32d814ee277f8f2c32311c29a44bb488a70f8127ee4caae8d0bb148e91433c0175f217778022f501d7c26d62f5c84032a317dcf3fbb31edb2 WHIRLPOOL c25eab3e96ae5975ee953bf580bfe65bd2b23eb76e9248a6bc35946ceff3a10cf6b68fb4213320a152f29e0109a250b70f67fab6381d70d3807bf7dc86107e56
 DIST icalendar-2.1.1.tar.gz 25516 SHA256 40168c793ac9018dd8182d2477271adc4ad20b57bf65668ccb90a0b30b692fb7 SHA512 6a799d9b8f768d4e98d6237170b54d23013968a958e681be9f6fb320585f1882e22d004c6fbd9dcb95b98d671fb56d33bda8aacb791ef68d950661c652d71246 WHIRLPOOL 7cdb499e6dbc5bd48983d4f84df5233f41ef8b2284c98768cc479a7b9a9424401d4bbf2f447ce5c5433c2f472cfd114a6647b7af010caedb5ffb94d6b7b96a94
+DIST icalendar-2.2.0.tar.gz 27162 SHA256 dd0c5ec5e7f4377065e44462c4e78cf8dc91760e2f7e5df111917880d58f373d SHA512 e307203fc91122aff0c5ed2b041becb6d87c424052c71fa169e0791bf2857cf2966c5f2f445e16727bd3ab61e7b1be0feef93bde5a1a82d7f6f2aab72cd399a6 WHIRLPOOL d8430181134b9d62ea3e50a402eb90c163f1a353c70773501c666b071bb9db527526055f352edaf4dc7b85c6e1b33719eda5c5daa1d1833ed9649c6fb89313e0
