@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/icalendar
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 
+*icalendar-2.2.0 (24 Sep 2014)
+
+  24 Sep 2014; Hans de Graaff <graaff@gentoo.org> +icalendar-2.2.0.ebuild:
+  Version bump.
+
   24 Sep 2014; Hans de Graaff <graaff@gentoo.org> -icalendar-1.4.3.ebuild,
   -icalendar-2.0.1.ebuild, -icalendar-2.1.0.ebuild:
   Cleanup.
